update tsconfig path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
+      "@src/*": [
+        "./*"
+      ],
       "@core/*": [
         "app/core/*"
       ]
