move core outside /app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "./*"
       ],
       "@core/*": [
-        "app/core/*"
+        "core/*"
       ]
     },
     "outDir": "./dist/out-tsc",
