Add ProductService & add Table.Product RSL policies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
       ],
       "@core/*": [
         "core/*"
+      ],
+      "@modules/*": [
+        "app/main/modules/*"
       ]
     },
     "outDir": "./dist/out-tsc",
