--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "@core/*": [
         "app/core/*"
       ],
+      "@interfaces/*": [
+        "app/interfaces/*"
+      ],
       "@modules/*": [
         "app/components/main/modules/*"
       ],
