--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
       "@core/*": [
         "app/core/*"
       ],
+      "@enums/*": [
+        "app/enums/*"
+      ],
       "@interfaces/*": [
         "app/interfaces/*"
       ],
